[gd_scene format=3 uid="uid://cha0jq6pwx8kp"]

[ext_resource type="Script" uid="uid://br65sa05mlara" path="res://barkley2/scenes/Objects/_minigames/VRW/chat_messages.gd" id="1_u0heb"]
[ext_resource type="LabelSettings" uid="uid://b38457p3a0dym" path="res://barkley2/resources/label_fn2.tres" id="2_u0heb"]

[node name="chat_messages" type="VBoxContainer" unique_id=1143811239]
custom_minimum_size = Vector2(204, 61)
offset_right = 204.0
offset_bottom = 61.0
mouse_filter = 2
alignment = 2
script = ExtResource("1_u0heb")

[node name="message_lbl_1" type="Label" parent="." unique_id=519905016]
layout_mode = 2
text = "Message 1"
label_settings = ExtResource("2_u0heb")

[node name="message_lbl_2" type="Label" parent="." unique_id=1286063261]
layout_mode = 2
text = "Message 1"
label_settings = ExtResource("2_u0heb")

[node name="message_lbl_3" type="Label" parent="." unique_id=1157590130]
layout_mode = 2
text = "Message 1"
label_settings = ExtResource("2_u0heb")

[node name="message_lbl_4" type="Label" parent="." unique_id=1097992689]
layout_mode = 2
text = "Message 1"
label_settings = ExtResource("2_u0heb")

[node name="message_lbl_5" type="Label" parent="." unique_id=950602222]
layout_mode = 2
text = "Message 1"
label_settings = ExtResource("2_u0heb")
